# supercompilation-by-evaluation

./: GHC.hs  IdSupply.hs  Main.hs  Renaming.hs  StaticFlags.hs  Utilities.hs  supercompile.cabal
Core/: Parser.hs  Renaming.hs  Syntax.hs
Evaluator/: Evaluate.hs  Syntax.hs
Supercompile/: Drive.hs
Termination/: Terminate.hs
