Cabal-Version:      >= 1.2
Build-Type:         Simple
Name:               supercompile
Version:            0.1
Maintainer:         Max Bolingbroke <batterseapower@hotmail.com>
Homepage:           http://www.github.com/batterseapower/supercompile
License:            BSD3
License-File:       LICENSE
Author:             Max Bolingbroke
Synopsis:           Call-by-need supercompiler in Haskell
Category:           Language

Executable supercompile
    Main-Is:        Main.hs
    Build-Depends:  base >= 4 && < 5,
                    containers,
                    cpphs,
                    deepseq,
                    directory,
                    filepath,
                    haskell-src-exts >= 1.16 && < 1.17,
                    pretty,
                    prettyclass,
                    process,
                    QuickCheck,
                    random,
                    time

    Ghc-Options:    -fwarn-unused-binds -fwarn-unused-imports -fwarn-unused-matches -fwarn-incomplete-patterns
